# rs-event_emitter

./: Cargo.toml  README.md
src/: emitter.rs  event_emitter.rs  lib.rs
tests/: test.rs
